feat: webpack and environment injection

--- a/apps/bff/src/assets/scss/variables.scss
+++ b/apps/bff/src/assets/scss/variables.scss
@@ -3,4 +3,4 @@ $font-family-sans-serif: 'Saira Variable', sans-serif;
 $font-family-monospace: 'Saira Variable', monospace;
 $font-family-serif: 'Saira Variable', serif;
 $font-family-base: $font-family-sans-serif !default;
-$fa-font-path: '@fortawesome/fontawesome-free/webfonts' !default;
+$fa-font-path: '../webfonts' !default;
