--- a/apps/bff/src/styles.scss
+++ b/apps/bff/src/styles.scss
@@ -16,8 +16,7 @@
     500,
     700,
   ),
-  $styles: normal,
-  $directory: '@fontsource-variable/saira/files'
+  $styles: normal
 );
 
 // SECTION: GLOBALS
