--- a/apps/bff/src/app/components/pokemon/pokemon.component.scss
+++ b/apps/bff/src/app/components/pokemon/pokemon.component.scss
@@ -10,3 +10,8 @@
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   background-color: lightblue;
 }
+
+.pokemon-id-input {
+  width: 50%;
+  margin: 10px;
+}
